--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   height: 100%;
 }
 .ScheduleSelector__Wrapper-sc-1ke4ka2-0{
-  padding: 3% 5%;
+  padding: 3% 5% 0 5%;
 }
 * {
   box-sizing: border-box;
