--- a/src/containers/EmployeeHomePage/style.css
+++ b/src/containers/EmployeeHomePage/style.css
@@ -14,6 +14,103 @@
 .card-box .inner {
     padding: 5px 10px 0 10px;
 }
+.message-box{
+    height:380px;
+    max-width: 500px;
+    border:1px solid black;
+    margin: 0 auto;
+}
+.message-containter{
+    height: 303px;
+    background-color: #fff;
+    border: 1px solid #e5e5ea;
+    border-radius: 0.25rem;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.25rem;
+    max-width: 600px;
+    padding: 0.5rem 1.5rem;
+    overflow-y: auto;
+}
+.message-containter p{
+    border-radius: 1.15rem;
+    line-height: 1.25;
+    max-width: 75%;
+    font-size: large;
+    padding: 0.5rem .875rem;
+    position: relative;
+    word-wrap: break-word;
+}
+.message-containter p::before,
+.message-containter p::after {
+  bottom: -0.1rem;
+  content: "";
+  height: 1rem;
+  position: absolute;
+}
+p.right-bubble {
+    align-self: flex-end;
+    background-color: #248bf5;
+    color: #fff; 
+  }
+  
+  p.right-bubble::before {
+    border-bottom-left-radius: 0.8rem 0.7rem;
+    border-right: 1rem solid #248bf5;
+    right: -0.35rem;
+    transform: translate(0, -0.1rem);
+  }
+  
+  p.right-bubble::after {
+    background-color: #fff;
+    border-bottom-left-radius: 0.5rem;
+    right: -40px;
+    transform:translate(-30px, -2px);
+    width: 10px;
+  }
+  
+  p[class^="from-"] {
+    margin: 0.5rem 0;
+    width: fit-content;
+  }
+  
+  p.right-bubble ~ p.right-bubble {
+    margin: 0.25rem 0 0;
+  }
+  
+  p.right-bubble ~ p.right-bubble:not(:last-child) {
+    margin: 0.25rem 0 0;
+  }
+  
+  p.right-bubble ~ p.right-bubble:last-child {
+    margin-bottom: 0.5rem;
+  }
+  
+  p.left-bubble {
+    align-items: flex-start;
+    background-color: #e5e5ea;
+    color: #000;
+  }
+  
+  p.left-bubble:before {
+    border-bottom-right-radius: 0.8rem 0.7rem;
+    border-left: 1rem solid #e5e5ea;
+    left: -0.35rem;
+    transform: translate(0, -0.1rem);
+  }
+  
+  p.left-bubble::after {
+    background-color: #fff;
+    border-bottom-right-radius: 0.5rem;
+    left: 20px;
+    transform: translate(-30px, -2px);
+    width: 10px;
+  }
+
+input.form-control{
+    height: 38px;
+    bottom: -10px;
+}
 
 .card-box h3 {
     font-size: 27px;
