--- a/src/containers/EmployeeHomePage/style.css
+++ b/src/containers/EmployeeHomePage/style.css
@@ -5,10 +5,21 @@
     margin: 20px 0px;
     height: 180px;
 }
-
+#collapse{
+  max-width: 500px;
+  margin: 0 auto;
+  height: 200px;
+  overflow-y: scroll;
+}
+#collapse > ol > li:hover{
+  cursor: pointer;
+}
 .nav-item{
   width: 100%!important;
   text-align: center;
+}
+.nav-item:hover{
+  cursor: pointer;
 }
 .col-sm-3, .col-sm-9{
   padding:0!important;
