--- a/src/containers/CustomerHomePage/style.css
+++ b/src/containers/CustomerHomePage/style.css
@@ -38,7 +38,13 @@
     color: rgba(0, 0, 0, 0.15);
     opacity: 0.4;
 }
-
+.card-box-footer{
+    height: 100%;
+    opacity: 0;
+}
+.card-box-footer:hover{
+    opacity: 50;
+}
 .card-box .card-box-footer {
     position: absolute;
     left: 0px;
