--- a/src/containers/NurseAppointments/style.css
+++ b/src/containers/NurseAppointments/style.css
@@ -1,3 +1,78 @@
 .k-event-template{
     font-size: large;
 }
+
+.col-xs-12 {
+    float: right;
+    width: 100%;
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  
+  .cardcont {
+    border-radius: 3px;
+    -webkit-animation: fadein ease-out 2s;
+    /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein ease-out 2s;
+    /* Firefox < 16 */
+    -ms-animation: fadein ease-out 2s;
+    /* Internet Explorer */
+    -o-animation: fadein ease-out 2s;
+    /* Opera < 12.1 */
+    animation: fadein ease-out 2s;
+  }
+  
+  .nopadding {
+    padding: 0;
+  }
+  
+  .wrapper {
+    padding: 40px;
+  }
+  
+  .wrapper h3 {
+    font-size: 2em;
+    letter-spacing: .75vh;
+    font-weight: 700;
+    font-family: Lato, sans-serif;
+    margin-bottom: 20px;
+  }
+  
+  .wrapper .col-md-12 {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+    opacity: .5;
+  }
+  
+  .wrapper .col-md-12:hover {
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
+    cursor: pointer;
+    opacity: 1;
+  }
+  
+  .responsive-circle {
+    font-weight: 700;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .image-cover {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    margin: 25px;
+    object-position: center right;
+  }
+  
+  figcaption {
+    color: #0000FF;
+    font-family: Oswald, sans-serif;
+    margin-bottom: 30px;
+  }
